--- a/src/parse.html
+++ b/src/parse.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="UTF-8" />
 		<title>Visualization</title>
 		<script type="text/javascript">
 			var originalHeight = 620;
