--- a/src/online/parse.html
+++ b/src/online/parse.html
@@ -21,10 +21,10 @@
 		<script type="text/javascript" src="lib/jquery-1.8.3.js"></script>
 		<script type="text/javascript" src="lib/jquery-ui.js"></script>
 		<script type="text/javascript" src="lib/detect-zoom-master/detect-zoom.js"></script>
-		<script type="text/javascript" src="slider.js"></script>
+		<!--<script type="text/javascript" src="slider.js"></script> -->
 		<script type="text/javascript" src="zoom.js"></script>
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link rel="stylesheet" type="text/css" href="slider.css">	
+		<!--<link rel="stylesheet" type="text/css" href="slider.css">	-->
 
 	</head>
 	<body onload="start()">
@@ -38,11 +38,11 @@
 				<form id="options">
 					<div>
 						<span>View size on screen:&nbsp;</span><input type="checkbox" id="usage" /><br />
-						<input type="button" id="pause" value="Pause" onclick="pauseAnimation()" /><br />
+						<!--<input type="button" id="pause" value="Pause" onclick="pauseAnimation()" /><br /> -->
 					</div>
 				</form>
 			</div>
-		</div>
-		<div id="slider" ></div>
+		</div><!--
+		<div id="slider" ></div>-->
 	</body>
 </html>
